--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,7 @@
             </div>
 
             <div id="footer">
-                <span id="power">Powered by <a href="https://github.com/">GitHub</a> & <a href="http://jekyllrb.com/">Jekyll</a></span>
-            </div>
+                <span id="power">Powered by <a href="http://jekyllrb.com/">Jekyll</a> & hosted and served by <a href="http://pages.github.com">GitHub Pages</a></span>
         </div>
 
         <!-- Google Analytics -->
