--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
             ga('create', 'UA-29309351-1', 'carolineaubry.com');
+            ga('require', 'displayfeatures');
             ga('send', 'pageview');
         </script>
         <!-- Google Analytics end -->
